# fiawec-results-dl

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yml  pip-install.yml
fiawec/: __main__.py  event.py  season.py  seasons.py
