[metadata]
name = fiawec-results-dl
author = Daniel Cordero
author_email = fiawec-results-dl@0xdc.io
description_file = README.md
project_urls =
	Source Code = https://github.com/0xdc/fiawec-results-dl
	Bug Tracker = https://github.com/0xdc/fiawec-results-dl/issues
license = MIT
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP

[files]
packages =
	fiawec

[entry_points]
console_scripts =
	fiawec-results-dl = fiawec.__main__:main
